fix: issue of invoice pdf company name change

--- a/store/templates/store/order-report.html
+++ b/store/templates/store/order-report.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eranian Online shopping in Bangladesh | Order Now From Eranian.com</title>
+  <title>Zonaki Online shopping in Bangladesh | Order Now From zonaki.com.bd</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
   </div>
   <table repeat="1">
     <tr>
-      <th style="text-align: left; font-size: 15px;">Eranian Online shopping in Bangladesh </th>
+      <th style="text-align: left; font-size: 15px;">Zonaki Online shopping in Bangladesh </th>
       <th style="text-align: right; font-size: 15px;">Invoice</th>
     </tr>
     <tr>
